# backup_manager_gdrive

./: .env.example  .gitignore  README.md  backup.py  config.py  files_config.example.json  pyproject.toml
src/backup/: __init__.py  auth.py  config.py  drive_manager.py  files_backup.py  mysql_backup.py  service.py
